--- a/5_DGU/융합프로그래밍2/기말범위(gui,파일처리)/2_파일입출력/1_입출력스트림.md
+++ b/5_DGU/융합프로그래밍2/기말범위(gui,파일처리)/2_파일입출력/1_입출력스트림.md
@@ -20,7 +20,7 @@ public class Main {
 
 	public static void main(String[] args) {
 		// TODO Auto-generated method stub
-		
+		ㅌ`
 		try {
 			FileReader fin = new FileReader("c:\\windows\\system.ini");
 			int c;
@@ -35,5 +35,10 @@ public class Main {
 	}
 
 }
+
+```
+
+파일 쓰기
+```java
 
 ```
