--- a/5_DGU/융합프로그래밍2/기말범위(gui,파일처리)/1_swing_gui/3)swing_component/12_컴포넌트.md
+++ b/5_DGU/융합프로그래밍2/기말범위(gui,파일처리)/1_swing_gui/3)swing_component/12_컴포넌트.md
@@ -101,3 +101,37 @@ public class LabelEx extends JFrame {
 ```
 
 
+이미지를 포함한 CheckBox
+```java
+package swing_3_component;
+import javax.swing.*;
+import java.awt.*;
+
+public class CheckBoxEx extends JFrame {
+	public CheckBoxEx() {
+		setTitle("체크박스 만들기 예제");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+		Container c = getContentPane();
+		c.setLayout(new FlowLayout());
+		ImageIcon cherryIcon = new ImageIcon("images/cherry.jpg"); 			ImageIcon selectedCherryIcon = new ImageIcon(
+											"images/selectedCherry.jpg");
+
+		JCheckBox apple = new JCheckBox("사과");
+		JCheckBox pear = new JCheckBox("배", true);
+		JCheckBox cherry = new JCheckBox("체리", cherryIcon);
+		cherry.setBorderPainted(true);
+		cherry.setSelectedIcon(selectedCherryIcon);
+
+		c.add(apple);
+		c.add(pear);
+		c.add(cherry);
+
+		setSize(250,150);
+		setVisible(true);
+	}
+	public static void main(String [] args) {
+		new CheckBoxEx();
+	}
+}
+
+```
