--- a/3_Programming_Manuals/Java/3_파일입출력/버퍼 리더.md
+++ b/3_Programming_Manuals/Java/3_파일입출력/버퍼 리더.md
@@ -11,3 +11,37 @@ public class Main{
     }  
 }
 ```
+
+br.read()
+- 한글자 읽기
+```java
+package test;  
+import java.io.*;  
+  
+public class Test {  
+    public static void main(String[] args) throws Exception{  
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));  
+  
+        int num = br.read();  
+  
+        System.out.println(num);  
+    }  
+}
+```
+
+br.readLine()
+- 한줄 읽기
+```java
+package test;
+import java.io.*;
+
+public class Test {
+    public static void main(String[] args) throws Exception{
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+
+        String str = br.readLine();
+
+        System.out.println(str);
+    }
+}
+```
